modif inscription / formulaire connexion

--- a/Inscription.html
+++ b/Inscription.html
@@ -61,7 +61,20 @@
                 </label>
             </div>
         </div>
-        <br>    
+        <br>
+        <div>
+            <div>
+                <label for="user">Nom d'utilisateur : <br>
+                    <input type="text" name="user" placeholder="HanSolo" required>
+                </label>
+            </div> 
+            <div>
+                <label for="password">Mot de Passe : <br>
+                    <input type="password" name="password" required>
+                </label>
+            </div>
+        </div>
+        <br>
         <button type="submit" name="submit">S'inscrire</button>
     </form>
     
