modif css, rajout href, ajout info inscription

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <img src="img/Star_Wars_Logo.png" alt="Star_Wars_Logo">
         <nav>
-            <a href="">Inscription</a>
-            <a href="">Connexion</a>
+            <a href="Inscription.html">Inscription</a>
+            <a href="Connexion.html">Connexion</a>
         </nav>
     </header>
     <main>
