--- a/Inscription.html
+++ b/Inscription.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Inscription</title>
 </head>
@@ -17,11 +20,12 @@
             </nav>
             
         </header>
-        
+
         <main class="container">
             <h1 id="titre">
                 Formulaire d'Inscription 
             </h1>
+            <img src="img/hello.gif" alt="hello" id="hello">
             <div id="info">
                 <div>
                     <label for="civilite">Civilité : <br>
