--- a/Inscription.html
+++ b/Inscription.html
@@ -98,8 +98,13 @@
             <button type="submit" name="submit">S'inscrire</button>
         </main>
         <footer>
+            <a href="index.html" title="Accueil">
+                <img src="img/Star_Wars_Logo.png" alt="Star_Wars_Logo">
+            </a>
             <nav>
-                <a href="index.html">Home</a>
+                <a class="simpleLink" href="DarkVador.html">Dark Vador</a>
+                <a class="simpleLink" href="DarkVador.html">Leia Organa</a>
+                <a class="simpleLink" href="DarkVador.html">RD-D2</a>
             </nav>
         </footer>
         
