--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div>
                     <h2>Dark Vador</h2>
                     <p>Lorem ipsum dolor sit amet.</p>
-                    <a class="simpleLink" href="DarkVador.html" target="" title="">
+                    <a class="simpleLink" href="DarkVador.html" title="Dark Vador">
                         Voir la fiche
                     </a>
                 </div>
@@ -41,7 +41,7 @@
                 <div>
                     <h2>Leia Organa</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam harum error placeat, temporibus veniam quibusdam voluptates provident neque labore eaque!</p>
-                    <a class="simpleLink" href="DarkVador.html" target="" title="">
+                    <a class="simpleLink" href="Leia.html" title="Leia Organa">
                         Voir la fiche
                     </a>
                 </div>
@@ -51,7 +51,7 @@
                 <div>
                     <h2>R2-D2</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, voluptas.</p>
-                    <a class="simpleLink" href="DarkVador.html" target="" title="">
+                    <a class="simpleLink" href="R2D2.html" title="R2-D2">
                         Voir la fiche
                     </a>
                 </div>
@@ -63,9 +63,9 @@
             <img src="img/Star_Wars_Logo.png" alt="Star_Wars_Logo">
         </a>
         <nav>
-            <a class="simpleLink" href="DarkVador.html">Dark Vador</a>
-            <a class="simpleLink" href="DarkVador.html">Leia Organa</a>
-            <a class="simpleLink" href="DarkVador.html">RD-D2</a>
+            <a class="simpleLink" href="DarkVador.html" title="Dark Vador">Dark Vador</a>
+            <a class="simpleLink" href="Leia.html" title="Leia Organa">Leia Organa</a>
+            <a class="simpleLink" href="R2D2.html" title="R2-D2">RD-D2</a>
         </nav>
     </footer>
 
