--- a/Leia.html
+++ b/Leia.html
@@ -23,10 +23,10 @@
     </header>
     <main class="ficheConteneur">
         <div class="gauche">
-            <img src="img/DarkVador.jpg" alt="Dark Vador">
+            <img src="img/LeiaOrgana.jpg" alt="Leia Organa">
         </div>
         <div class="droite">
-            <h1>Dark Vador</h1>
+            <h1>Leia Organa</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, autem!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque tempore, eum est molestias quas quis perspiciatis delectus similique facilis?</p>
         </div>            
