--- a/R2D2.html
+++ b/R2D2.html
@@ -23,10 +23,10 @@
     </header>
     <main class="ficheConteneur">
         <div class="gauche">
-            <img src="img/DarkVador.jpg" alt="Dark Vador">
+            <img src="img/R2D2.jpg" alt="R2-D2">
         </div>
         <div class="droite">
-            <h1>Dark Vador</h1>
+            <h1>R2-D2</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, autem!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque tempore, eum est molestias quas quis perspiciatis delectus similique facilis?</p>
         </div>            
