modif footer lien

--- a/Inscription.html
+++ b/Inscription.html
@@ -102,9 +102,9 @@
                 <img src="img/Star_Wars_Logo.png" alt="Star_Wars_Logo">
             </a>
             <nav>
-                <a class="simpleLink" href="DarkVador.html">Dark Vador</a>
-                <a class="simpleLink" href="DarkVador.html">Leia Organa</a>
-                <a class="simpleLink" href="DarkVador.html">RD-D2</a>
+                <a class="simpleLink" href="DarkVador.html" title="Dark Vador">Dark Vador</a>
+                <a class="simpleLink" href="Leia.html" title="Leia Organa">Leia Organa</a>
+                <a class="simpleLink" href="R2D2.html" title="R2-D2">RD-D2</a>
             </nav>
         </footer>
         
