--- a/Inscription.html
+++ b/Inscription.html
@@ -26,76 +26,47 @@
                 Formulaire d'Inscription 
             </h1>
             <img src="img/hello.gif" alt="hello" id="hello">
-            <div id="info">
-                <div>
-                    <label for="civilite">Civilité : <br>
-                        <input type="radio" name="civilite" checked>Mme
-                        <input type="radio" name="civilite">Mr
-                    </label>
-                </div>
-                <div>
-                    <br>
-                    <label for="lname">Nom de famille : <br>
-                        <input type="text" name="lname" placeholder="Solo" required>
-                    </label>
-                </div>
-                <div>
-                    <label for="fname">Prénom : <br>
-                        <input type="text" name="fname" placeholder="Han" required>
-                    </label>
-                </div>
-                <div>
-                    <label for="date">Date de Naissance : <br> 
-                        <input type="date" name="date" required>
-                    </label>
-                </div>
-            </div>
-            <br>
-            <div id="coord">
-                <div>
-                    <label for="tel">Numéro de Téléphone : <br> 
-                        <input type="tel"  placeholder="06 33 44 55 66" required> 
-                    </label>
-                </div>
-                <div>
-                    <label for="mail">Adresse e-mail: <br>
-                        <input type="email" name="mail" placeholder="han.solo@gmail.com" required>
-                    </label>
-                </div>
-                <div>
-                    <label for="adresse">Adresse : <br>
-                        <input type="text" name="adresse" placeholder="10 rue de Jabba" required>
-                    </label>
-                </div>
-                <div>
-                    <label for="ville">Ville : <br>
-                        <input type="text" name="ville"  placeholder="Coronet City" required>
-                    </label>
-                </div>
-                <div>
-                    <label for="postal">Code Postal : <br>
-                        <input type="number" name="postal" min="1" placeholder="59000" required>
-                    </label>
-                </div>
-            </div>
-            <br>
-            <div>
-                <div>
-                    <label for="user">Nom d'utilisateur : <br>
-                        <input type="text" name="user" placeholder="HanSolo" required>
-                    </label>
-                </div> 
-                <div>
-                    <label for="password">Mot de Passe : <br>
-                        <input type="password" name="password" required>
-                    </label>
-                    <br>
-                    <label for="password">Confirmer Mot de Passe : <br>
-                        <input type="password" name="password" required>
-                    </label>
-                </div>
-            </div>
-            <button type="submit" name="submit">S'inscrire</button>
+            <form action="" method="">
+                <label for="civilite">Civilité : <br>
+                    <input type="radio" name="civilite" checked>Mme
+                    <input type="radio" name="civilite">Mr
+                </label>
+                <label for="lname">Nom de famille : <br>
+                    <input type="text" name="lname" placeholder="Solo" required>
+                </label>
+                <label for="fname">Prénom : <br>
+                    <input type="text" name="fname" placeholder="Han" required>
+                </label>
+                <label for="date">Date de Naissance : <br> 
+                    <input type="date" name="date" required>
+                </label>
+                <label for="tel">Numéro de Téléphone : <br> 
+                    <input type="tel"  placeholder="06 33 44 55 66" required> 
+                </label>
+                <label for="mail">Adresse e-mail: <br>
+                    <input type="email" name="mail" placeholder="han.solo@gmail.com" required>
+                </label>
+                <label for="adresse">Adresse : <br>
+                    <input type="text" name="adresse" placeholder="10 rue de Jabba" required>
+                </label>
+                <label for="ville">Ville : <br>
+                    <input type="text" name="ville"  placeholder="Coronet City" required>
+                </label>
+                <label for="postal">Code Postal : <br>
+                    <input type="number" name="postal" min="1" placeholder="59000" required>
+                </label>
+                <label for="user">Nom d'utilisateur : <br>
+                    <input type="text" name="user" placeholder="HanSolo" required>
+                </label>
+                <label for="password">Mot de Passe : <br>
+                    <input type="password" name="password" required>
+                </label>
+                <label for="password">Confirmer Mot de Passe : <br>
+                    <input type="password" name="password" required>
+                </label>
+                <button type="reset">Reset</button>
+                <button type="submit" name="submit">S'inscrire</button>
+            </form>
         </main>
         <footer>
             <a href="index.html" title="Accueil">
