modif page persos

--- a/DarkVador.html
+++ b/DarkVador.html
@@ -27,8 +27,32 @@
         </div>
         <div class="droite">
             <h1>Dark Vador</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, autem!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque tempore, eum est molestias quas quis perspiciatis delectus similique facilis?</p>
+            <p>
+                Il s’agit du personnage central des six premiers films de la saga Star Wars de George Lucas. 
+                Son fils Luke Skywalker était le héros de la trilogie originale (épisodes IV, V et VI), mais la prélogie (épisodes I, II et III) a mis Anakin Skywalker au centre de toute l'intrigue.
+            </p>
+            <p>
+                Dans La Menace Fantôme, Anakin est un enfant de petite taille aux cheveux courts et blonds (coupe au bol) et aux yeux bleus, pilote de module de courses. 
+                Il est esclave sur Tatooine. À la fin du film, il porte la coupe de cheveux (avec la tresse signifiant qu’il est apprenti) et les vêtements des Padawan. 
+                Dans L'Attaque des clones, il est devenu adulte et a donc considérablement grandi. Il mesure dans les 1,80 m et arbore toujours la coupe de cheveux des Padawans. 
+                Lors du duel final contre le comte Dooku, il se fait trancher l'avant-bras droit et est contraint de porter une prothèse mécanique. 
+                Dans La Revanche des Sith, il a considérablement laissé pousser ses cheveux et une cicatrice est présente sur sa tempe droite. 
+                Durant le massacre du Conseil Séparatiste, ses yeux sont jaunes et injectés de sang, ce qui montre une forte emprise du Côté Obscur. 
+                Lorsqu'il perd son duel contre son ancien maître Obi wan Kenobi, à la fin de l'épisode III, il perd en même temps le dernier bras qui lui reste, ainsi que ses deux jambes. 
+                La colère et la rage déforment son visage avant que son corps ne soit presque entièrement brûlé par de la lave en fusion. 
+                Son corps sera désormais couvert de cicatrices et de traces de brûlures et pour survivre, Anakin sera enfermé dans une sombre armure de survie qu'il occupera jusqu'à la fin de sa vie. 
+                À la fin du Retour du Jedi, lorsque son fils Luke lui retire le masque de Dark Vador, le visage d'Anakin est défiguré par de longues balafres sur ses joues et sur le haut de son crâne totalement chauve.
+                Selon une étude publiée dans la revue Psychiatry Research, Anakin présente plusieurs symptômes indiquant un trouble de la personnalité borderline9.</p>
+            <p>
+                Sur Mustafar, Vador subit des dommages effroyables et irréversibles au corps et au visage. 
+                Il est intégralement couvert de brûlures et de cicatrices. Les prothèses mécaniques des droïdes chirurgicaux de l'Empire élèvent sa stature à 2,03 ma 2. 
+                Il porte une lourde armure noire, avec un panneau de contrôle sur la poitrine, et un casque doté d’un bruyant respirateur. 
+                Dark Vador porte également une longue cape noire.
+            </p>
+
+            <p>
+                Source : <a href="https://fr.wikipedia.org/wiki/Anakin_Skywalker">>Dark Vador</a>
+            </p>
         </div>            
     </main>
     <footer>
