--- a/Leia.html
+++ b/Leia.html
@@ -27,8 +27,24 @@
         </div>
         <div class="droite">
             <h1>Leia Organa</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, autem!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque tempore, eum est molestias quas quis perspiciatis delectus similique facilis?</p>
+            <p>
+                La princesse Leia Organa d'Alderaan, plus simplement appelée Princesse Leia, est un personnage de fiction, femme politique sensible à la Force dans l'univers de Star Wars, née en 19 av. 
+                BY au Centre médical de la République sur Polis Massa. Elle est interprétée par Carrie Fisher (1956-2016) dans les première et troisième trilogies de la saga.
+            </p>
+            <p>
+                Leia Organa est un des rares éléments féminins de la trilogie originale avec le leader de la Rébellion Mon Mothma, qui présente le plan de bataille de l’Étoile de la mort, Beru Lars, la tante de Luke et quelques danseuses à la cour de Jabba.
+                Au début de l'épisode IV, la princesse fuit un vaisseau de guerre avec les plans de l'arme absolue de l'Empire, qu'elle cache dans les circuits intégrés de R2-D2. 
+                Elle réussit à envoyer in extremis l'astromécano et le droïde de protocole C-3PO hors du vaisseau avant d'être capturée par Dark Vador. Elle est menacée pour l'obliger à livrer les plans et également le point de rassemblement des rebelles. 
+                Transférée sur l’étoile de la mort, elle ne peut qu'assister à la destruction de sa planète d'origine, Alderaan, bien qu'elle fasse semblant d'avouer l'emplacement réel de la base rebelle, qui n'était alors plus occupée.
+                Emprisonnée en section de détention et même torturée par un robot utilisant des sérums de vérité, sa résistance aussi bien physique que mentale est héroïque.
+                Une fois libérée par Luke Skywalker, Han Solo et Chewbacca, elle rejoint la rébellion sur Yavin IV et livre les plans de l’étoile de la mort, entraînant la destruction de celle-ci au cours de la bataille de Yavin.
+                Elle prend ensuite sa place dans la rébellion où elle joue un rôle de premier plan dans l'organisation de la base de Hoth, loin de sa charge première de sénatrice.
+                Elle prend également part à la bataille sur la lune forestière d'Endor, où elle s'allie avec des Ewoks lors de l'attaque de la seconde étoile de la mort et fait partie d'un commando qui doit désactiver en surface le bouclier de protection de la station spatiale. 
+                Une histoire d'amour nait entre elle et Han Solo.
+            </p>
+            <p>
+                Source : <a href="https://fr.wikipedia.org/wiki/Leia_Organa">Leia Organa</a>
+            </p>
         </div>            
     </main>
     <footer>
