--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     </header>
     <main>
         <h1>Bienvenue !</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, autem!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque tempore, eum est molestias quas quis perspiciatis delectus similique facilis?</p>
+        <p>Vous voulez en connaître plus sur vos personnages préférés ?!</p>
+        <p>N'attendez plus et allez découvrir leur histoire !</p>
         <ul class="noBullets accueilListe">
             <li>
                 <img src="img/DarkVador.jpg" alt="Dark Vador">
                 <div>
                     <h2>Dark Vador</h2>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p></p>
                     <a class="simpleLink" href="DarkVador.html" title="Dark Vador">
                         Voir la fiche
                     </a>
