--- a/R2D2.html
+++ b/R2D2.html
@@ -27,9 +27,32 @@
         </div>
         <div class="droite">
             <h1>R2-D2</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, autem!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque tempore, eum est molestias quas quis perspiciatis delectus similique facilis?</p>
-        </div>            
+            <p>
+                R2-D2, aussi appelé D2-R2 dans la version française de l'épisode IV, est un des personnages emblématiques de la saga cinématographique Star Wars, présent dans dix des onze films de la saga. 
+                R2-D2 est un robot de forme ovoïde de petite taille qui s'exprime dans un langage sonore électronique ressemblant à des sifflements. 
+                Il est généralement accompagné de son compère C-3PO, un droïde qui le comprend et avec qui il forme un duo amusant.</p>
+            <p>
+                R2-D2 se fait remarquer en sauvant le vaisseau de la reine Padmé Amidala, puis il accompagnera Qui-Gon Jinn sur Tatooine. 
+                C'est là qu'il fait la connaissance d'Anakin mais aussi de C-3PO, son fidèle allié dans les épisodes suivants. 
+                Il accompagne également Anakin dans son vaisseau au combat contre la Fédération du commerce.
+            </p>
+            <p>
+                Très peu avant le début de la guerre, il accompagne Anakin et Padmé Amidala sur Naboo. Puis il les suit sur Tatooine, où C-3PO se joint à eux, et ils partent sur Géonosis. 
+                Il sauve la sénatrice in extremis en faisant tomber la cuve dans laquelle elle était bloquée juste avant la coulée de métal fondu qui l'aurait tuée. 
+                Il est avec C-3PO l'unique témoin du mariage entre Padmé Amidala et Anakin.
+                Compagnon de combat d'Anakin Skywalker et de Obi-Wan Kenobi, il les aide à libérer le chancelier Palpatine détenu par le Comte Dooku durant la bataille de Coruscant. 
+                Durant toute la fin de ce conflit, il est le droïde de vaisseau d'Anakin, même quand celui-ci devient Dark Vador. 
+                Il n'assiste cependant pas au massacre des novices sur Coruscant ni du vice-roi Gunray et du reste des membres de la CSI sur Mustafar.
+                Après la victoire de Obi-Wan sur Anakin, il suit le Jedi et Padmé jusqu'à l'astéroïde Polis Massa et assiste à la naissance des jumeaux Luke et Leia.
+            </p>
+            <p>
+                R2-D2 arrive tant bien que mal à se faire comprendre par les autres au gré des sons qu'il émet. Il dispose d'une panoplie d'accessoires, allant du bras télescopique aux rétro-fusées, et se déplace en roulant2.
+            </p>
+            <p>
+                Source : <a href="https://fr.wikipedia.org/wiki/R2-D2">R2-D2</a>
+            </p>
+        </div>   
+             
     </main>
     <footer>
         <a href="index.html" title="Accueil">
