--- a/Connexion.html
+++ b/Connexion.html
@@ -21,19 +21,15 @@
     </header>
     <main class="container">
         <h1 id="titre">Connexion</h1>
-        <div>
-            <div>
-                <label for="user">Nom d'utilisateur : <br>
-                    <input type="text" name="user" placeholder="HanSolo" required>
-                </label>
-            </div>
-            <div>
-                <label for="password">Mot de Passe : <br>
-                    <input type="password" name="password" required>
-                </label>
-            </div>
-        </div>
-        <button type="submit" name="submit">Connexion</button> 
+        <form action="" method="">
+            <label for="user">Nom d'utilisateur : <br>
+                <input type="text" name="user" placeholder="HanSolo" required>
+            </label>
+            <label for="password">Mot de Passe : <br>
+                <input type="password" name="password" required>
+            </label>
+            <button type="submit" name="submit">Connexion</button> 
+        </form>
     </main>
     <footer>
         <a href="index.html" title="Accueil">
